--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <img class=" hidden lg:flex relative lg:-left-20 top-[100px]" src="./img/Иконки.png" alt="">
                 <p class="text-center lg:relative top-[100px] text-5xl -left-20 font-bold">Я Виктор</p>
                 <img class=" hidden lg:relative lg:flex left-20" src="./img/Subtract (2).png" alt="">
-                <p class="text-center lg:relative -top-[80px] -left-20 text-xl text-gray-500">Репетитор игры на гитаре с семилетним
+                <p class="ml-[130px] lg:relative -top-[80px] lg:-left-20 text-xl text-gray-500">Репетитор игры на гитаре с семилетним
                     <br> опытом преподавания
                 </p>
                 <div class=" text-center lg:flex relative top-[50px] lg:-left-20 gap-5">
@@ -40,5 +40,56 @@
             </aside>
         </section>
     </header>
+    <main>
+        <section class="mt-20 font-sans tiger">
+            <div class="container mx-auto p-6">
+                <h1 class="text-5xl font-bold mb-8">Преподаю</h1>
+                <aside class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+                    <div class="bg-gray-100 p-4 rounded-lg shadow-md text-center">
+                        <img src="./img/Электро-гитара 1.png" alt="Электро гитара" class="mx-auto mb-4">
+                        <p class="text-3xl font-medium">Электро гитара</p>
+                    </div>
+                    <div class="bg-[#f28b64] p-4 rounded-lg shadow-md text-center">
+                        <img src="./img/Акустика-гитара 1.png" alt="Акустическая гитара" class="mx-auto mb-4">
+                        <p class="text-3xl font-medium">Акустическая гитара</p>
+                    </div>
+                    <div class="bg-[#5290ea] p-4 rounded-lg shadow-md text-center">
+                        <img src="./img/Укулелли-гитара 1.png" alt="Укулеле гитара" class="mx-auto mb-4">
+                        <p class="text-3xl font-medium">Укулеле гитара</p>
+                    </div>
+                </aside>
+                <aside class="mt-10 grid grid-cols-1 sm:grid-cols-4 gap-4 text-center">
+                    <div class="flex gap-5 ml-5">
+                        <img src="./img/01-Иконка.png" alt="">
+                        <div>
+                            <p class="text-4xl font-bold">7</p>
+                            <p class="text-gray-600 text-xl">лет <br> преподавания</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-5 ml-5">
+                        <img src="./img/04-Иконка_вторая секкция 1.png" alt="">
+                        <div>
+                            <p class="text-4xl font-bold">276</p>
+                            <p class="text-gray-600 text-xl">Отзывов <br>  на 5 звезд</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-5 ml-5">
+                        <img src="./img/03-Иконка_вторая секкция 1.png" alt="">
+                        <div>
+                            <p class="text-4xl font-bold">314</p>
+                            <p class="text-gray-600 text-xl">лет <br> преподавания</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-5 ml-5">
+                        <img src="./img/02-Иконка_вторая секкция 1.png" alt="">
+                        <div>
+                            <p class="text-4xl font-bold">2000</p>
+                            <p class="text-gray-600 text-xl">лет <br> преподавания</p>
+                        </div>
+                    </div>
+                </aside>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
