--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,12 @@
                     <p class=" hidden lg:text-xl mt-2">Есть <br>
                         вопросы?</p>
                 </div>
-                <img class="hidden lg:relative lg:flex top-[65px] left-[244px]" src="./img/Subtract (1).png" alt="">
+                <img class="hidden lg:relative lg:flex top-[65px] left-[334px]" src="./img/Subtract (1).png" alt="">
             </aside>
         </section>
     </header>
     <main>
-        <section class="mt-20 font-sans tiger">
+        <section class="mt-20 font-sans">
             <div class="container mx-auto p-6">
                 <h1 class="text-5xl font-bold mb-8">Преподаю</h1>
                 <aside class="grid grid-cols-1 sm:grid-cols-3 gap-6">
@@ -89,6 +89,32 @@
                     </div>
                 </aside>
             </div>
+        </section>
+        <section class=" text-center block lg:flex bg-gray-200 h-[690px] justify-around gap-32 lg:mt-[500px] tiger">
+            <aside>
+                <img class="relative top-44" src="./img/Декор круги (2).png" alt="">
+                <p class="mt-52 text-7xl font-bold relative -top-[200px] lg:left-20">Обучение</p>
+            </aside>
+            <aside class="relative -top-[200px]">
+                <img class="hidden lg:flex relative lg:left-[437px] top-[200px]" src="./img/Декор круги.png" alt="">
+                <p class="mt-[140px] lg: text-5xl font-bold">Готовлю <br>
+                    виртуозов</p>
+                <p class="mt-5 text-xl text-gray-500">Равным образом рамки и место обучения кадров <br> влечет за собой процесс внедрения и <br>
+                    модернизации
+                    позиций, занимаемых участниками в <br> отношении поставленных задач. <br> Товарищи! реализация намеченных
+                    плановых <br> заданий позволяет выполнять важные задания по <br> разработке систем массового
+                    участия. </p>
+                <p class="text-xl text-gray-500 mt-5">Повседневная практика показывает, что рамки и <br> место обучения кадров позволяет оценить <br> значение новых
+                    предложений. Не следует, однако забывать, <br> что рамки и место обучения кадров <br> влечет за собой процесс
+                    внедрения и <br> модернизации систем массового участия.</p>
+                <div class=" block lg:flex gap-5 mt-5">
+                    <button class="bg-[#f28b64] py-2 px-8 text-xl text-white rounded-full">Забронировать <br>
+                        урок</button>
+                    <img class="hidden lg:flex ml-5" src="./img/Иконка чата 1.jpg" alt="">
+                    <p class="text-xl mt-2">Есть <br>
+                        вопросы?</p>
+                </div>
+            </aside>
         </section>
     </main>
 </body>
